# HPC

./: Makefile  README.md  README.txt  hello_world.cpp  run_mpi.sh  spectral_hybrid  spectral_mpi  spectral_seq  test2.sh
data/: dataset_mca_20k_labels.csv  mixed_dataset.csv  mixed_dataset_100k.csv  mixed_dataset_10k.csv  mixed_dataset_50k.csv  mixed_dataset_labels_mpi.csv  weak_dataset_10k_1rank.csv  weak_dataset_20k_2rank.csv  weak_dataset_40k_4rank.csv  weak_dataset_80k_8rank.csv
hw1/: hw1_pack.sh  hw1_spread.sh  mpi_bandwidth.cpp  plot_bw.py
hws/: mpi_results_pack.txt  mpi_results_spread.txt  test2.sh
old_base_code/: CMakeLists.txt  job_spectral.sh  nonmpi.sh  run_hybrid_final.pbs
scalability/: run.py
scripts/: generate_data.py  plot_results.py  run_mpi.pbs  run_seq.pbs
spectral_clustering/: .gitignore  CMakeLists.txt  README.md  SpectralFinal.e5006949  SpectralFinal.o5006949  SpectralHybridTest.o5006950  job_hybrid.sh  job_spectral.sh  mpi.sh  run_hybrid_final.pbs  run_job.pbs  run_serial_final.pbs  run_spectral_mpi.sh
spectral_clustering/data/: dataset.csv  mixed_dataset_1.csv  mixed_dataset_2.csv  mixed_dataset_labels.csv  mixed_dataset_labels_mpi.csv
spectral_clustering/scripts/: synt_data.py  visualize.py
spectral_clustering/scripts/data/: dataset.csv  mixed_dataset.csv
spectral_clustering/src/: SpectralClustering.cpp  SpectralClustering.hpp  SpectralClusteringMPI.cpp  SpectralClusteringMPI.hpp  main.cpp  mainMPI.cpp
src/: SpectralClustering.cpp  SpectralClustering.hpp  SpectralClusteringMPI.cpp  SpectralClusteringMPI.hpp  main.cpp  (+2 more)
(+114 files in other folders)
